# apifoncier

./: .gitignore  404.html  LICENSE  README.md  conftest.py  index.html  justfile  main.py  mkdocs.yml  objects.inv  pyproject.toml  setup.py  sitemap.xml
apifoncier/: __init__.py  client.py  config.py  exceptions.py  validators.py
apifoncier/endpoints/: __init__.py  base.py  cartofriches.py  dv3f.py  dvf_opendata.py  ff.py  indicateurs.py
docs/: cartofriches.md  dv3f.md  dvf_opendata.md  ff.md  index.md  indicateurs.md  usage.md
docs/endpoints/: cartofriches.md  dv3f.md  dvf_opendata.md  ff.md  indicateurs.md
docs/examples/: gallery.md
docs/quickstart/: index.md  installation.md  quickstart.ipynb  usage.md
dv3f/: index.html
dvf_opendata/: index.html
endpoints/cartofriches/: index.html
endpoints/dv3f/: index.html
endpoints/dvf_opendata/: index.html
endpoints/ff/: index.html
endpoints/indicateurs/: index.html
examples/gallery/: index.html
ff/: index.html
indicateurs/: index.html
installation/: index.html
quickstart/: index.html
quickstart/installation/: index.html
quickstart/quickstart/: index.html
quickstart/usage/: index.html
search/: search_index.json
tests/: tests_cartofriches_endpoint.py
usage/: index.html
